<resources>
    <string name="app_name">Vacina App</string>
    <string name="tela_inicial">Tela Inicial</string>
    <string name="descricao_filtrar_distritos">Definir os distritos a serem mostrados na tela inicial do app</string>
    <string name="galena_entrada">Galena</string>
    <string name="ponte_firme_entrada">Ponte Firme</string>
    <string name="santiago_de_minas_entrada">Santiago de Minas</string>
    <string name="presidente_olegario_entrada">Presidente Olegário</string>
    <string name="galena_valor">Galena</string>
    <string name="ponte_firme_valor">Ponte Firme</string>
    <string name="santiago_de_minas_valor">Santiago de Minas</string>
    <string name="presidente_olegario_valor">Presidente Olegário</string>
    <string name="tema_claro_entrada">Tema claro</string>
    <string name="tema_escuro_entrada">Tema escuro</string>
    <string name="tema_claro_valor">Tema claro</string>
    <string name="tema_escuro_valor">Tema escuro</string>
    <string name="escolher_tema">Escolher tema do app</string>
    <string name="area_usuario_ativo">Ativo</string>
    <string name="area_usuario_inativo">Inativo</string>
    <string name="pequena_entrada">Pequena</string>
    <string name="media_entrada">Média</string>
    <string name="grande_entrada">Grande</string>
    <string name="pequena_valor">Pequena</string>
    <string name="media_valor">Média</string>
    <string name="grande_valor">Grande</string>
    <string name="restaurar_configuracoes">Restaurar configurações</string>
    <string name="restaurar_configuracoes_para_padrao">Restaurar configurações para padrão</string>
    <string name="titulo_app">Vacina App</string>
    <string name="inicio">Início</string>
    <string name="vacinacao">Vacinação</string>
    <string name="config">Config.</string>
    <string name="locais">Locais</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Pesquisar">Pesquisar</string>
    <string name="acessar_alterar_meus_dados">Acessar/alterar meus dados</string>
    <string name="locais_de_vacinacao">Locais de Vacinação</string>
    <string name="usuario_comum">Usuário Comum</string>
    <string name="agente_de_saude">Agente de Saúde</string>
    <string name="home">Home</string>
    <string name="sair_logout">Sair/Logout</string>
    <string name="inserir_alterar_campanhas">Inserir/Alterar campanhas</string>
    <string name="campanhas_finalizadas">Campanhas finalizadas</string>
    <string name="entrar_login">Entrar/Login</string>
    <string name="vacina_app">Vacina App</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="pesquisar_vacina">Pesquisar vacina</string>
    <string name="configuracoes">Configurações</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="escolha_um_distrito">Escolha um distrito:</string>
    <string name="local_exemplo">Exemplo de nome posto 1</string>
    <string name="local_exemplo_2">Exemplo de nome posto 2</string>
    <string name="endereco_exemplo">Endereço: texto longo de duas linhas \ntexto longo</string>
    <string name="campanhas">Campanhas</string>
    <string name="campanha_de_vacina_o">Campanha De Vacinação:</string>
    <string name="tipo_da_campanha">Gripe</string>
    <string name="data_01_01_2022_at_05_01_2022">Data: 01/01/2022 até 05/01/2022</string>
    <string name="local_posto_de_sa_de_a">Local: Posto de Saúde A</string>
    <string name="ver_mais">Ver mais</string>
    <string name="hor_rio_8_00_s_14_00">Horário: 8:00 às 14:00</string>
    <string name="posto_de_saude_a">Posto de Saúde A</string>
    <string name="localizaçao">Localização: Rua 00, S/N, bairro “XXX” – Distrito “XXXXX XXXX”, 00000–000(CEP)</string>
    <string name="posto_de_saude_b">Posto de Saúde B</string>
    <string name="posto_de_saude_c">Posto de Saúde C</string>
    <string name="local_posto_de_saude_b">Local: Posto de Saúde B</string>
    <string name="variola">Variola</string>
    <string name="um_agente_de_sa_de_fa_a_login_para_continuar">É um agente de saúde? Faça login para continuar.</string>
    <string name="digite_aqui">Digite aqui…</string>
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="entrar">Entrar</string>
    <string name="crie_sua_conta_aqui"><u>Crie sua conta aqui</u></string>
    <string name="menu">MENU</string>
    <string name="app_logo">app_logo</string>
    <string name="unidades_de_saude">Unidades de Saúde</string>
    <string name="posto_titulo">Nome do posto</string>
    <string name="telefone">Telefone:</string>
    <string name="horario_de_funcionamento">Horário de funcionamento</string>
    <string name="segunda">Segunda:</string>
    <string name="vacinas">Vacinas</string>
    <string name="nome_da_vacina">Nome da vacina</string>
    <string name="doenca">Doença</string>
    <string name="ver">Público</string>
    <string name="dispon">Dispon.</string>
    <string name="nome_do_posto">Nome do posto</string>
    <string name="endereco">Endereço:</string>
    <string name="quarta">Quarta:</string>
    <string name="quinta">Quinta:</string>
    <string name="sexta">Sexta:</string>
    <string name="endereco_do_posto">Endereço do posto</string>
    <string name="telefone_exemplo">(00) 00000 0000</string>
    <string name="sabado">Sábado:</string>
    <string name="domingo">Domingo:</string>
    <string name="terca">Terça:</string>
    <string name="exemplo_de_horario">00:00 às 00:00</string>
    <string name="modificar_ou_adicionar_vacina">Modificar ou adicionar vacina</string>
    <string name="adicionar_vacina">Adicionar vacina</string>
    <string name="doenca_sub">Doença:</string>
    <string name="nome_da_doenca_hint">Nome da doença</string>
    <string name="disponibilidade">Disponibilidade:</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="distrito">Distrito:</string>
    <string name="galena">Galena</string>
    <string name="ponte_firme">Ponte Firme</string>
    <string name="presidente_olegario">Presidente Olegário</string>
    <string name="santiago_de_minas">Santiago de Minas</string>
    <string name="unidade_de_saude">Unidade de Saúde:</string>
    <string name="posto_de_saude_de_galena">POSTO DE SAÚDE DE GALENA</string>
    <string name="posto_de_saude_de_ponte_firme">POSTO DE SAÚDE DE PONTE FIRME</string>
    <string name="psf_aeroporto">PSF AEROPORTO</string>
    <string name="ubs_andorinhas">UBS ANDORINHAS</string>
    <string name="ubs_bile_godinho">UBS BILÉ GODINHO</string>
    <string name="ubs_dercina_maria_andre">UBS DERCINA MARIA ANDRÉ</string>
    <string name="ubs_mateus_caixeta">UBS MATEUS CAIXETA</string>
    <string name="ubs_planalto">UBS PLANALTO</string>
    <string name="ubs_zona_rural">UBS ZONA RURAL</string>
    <string name="publico">Disp.</string>
    <string name="publico_hint">Público</string>
    <string name="adicionar">Adicionar</string>
    <string name="editar">Editar</string>
    <string name="adicionar_modificar_campanha">Adicionar/Modificar Campanha</string>
    <string name="adicionar_nova_campanha">Adicionar Nova Campanha</string>
    <string name="adicionar_campanha">Adicionar Campanha</string>
    <string name="lista_de_campanhas">Lista de campanhas</string>
    <string name="filtrar_campanhas">Filtrar campanhas</string>
    <string name="distrito_texview">Distrito:</string>
    <string name="exemplo_de_titulo_de_campanha">Exemplo de Título de campanha</string>
    <string name="exemplo_data">00/00/0000 até 00/00/0000</string>
    <string name="data">Data:</string>
    <string name="horario">Horário:</string>
    <string name="horario_exemplo">00:00 às 00:00</string>
    <string name="Local">Local:</string>
    <string name="exemplo_de_nome_de_posto">Exemplo de nome de posto</string>
    <string name="remover">Remover</string>
    <string name="posto_textview">Posto:</string>
    <string name="nome_da_campanha">Nome da campanha:</string>
    <string name="nome_da_campanha_hint">Nome da Campanha</string>
    <string name="titulo_da_campanha">Título da campanha:</string>
    <string name="data_exemplo">00/00/0000</string>
    <string name="data_do_inicio">Data do início da campanha:</string>
    <string name="data_do_fim">Data do fim da campanha:</string>
    <string name="inicio_text">Início:</string>
    <string name="final_textview">Final:</string>
    <string name="as_ligacao">às</string>
    <string name="horario_ex">00:00</string>
    <string name="publico_alvo">Público-alvo:</string>
    <string name="publico_alvo_hint">Público-alvo</string>
    <string name="detalhes_informacoes_adicionais">Detalhes(Informações adicionais):</string>
    <string name="local">Local:</string>
    <string name="datas">00/00/0000 até 00/00/0000</string>
    <string name="dataa">Data:</string>
    <string name="detalhess">Detalhes:</string>
    <string name="modificar_campanha">Modificar campanha</string>
    <string name="salvar">Salvar</string>
    <string name="informacoes_adicionais_hint">Informações adicionais</string>
    <string name="descricao_botao">Botão do publico</string>
    <string name="modificar_vacina">Modificar vacina</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome_completo">Nome completo:</string>
    <string name="nome_completo_hint">Nome completo</string>
    <string name="cpf">CPF:</string>
    <string name="cpf_hint">000.000.000–00</string>
    <string name="e_mail">E-mail:</string>
    <string name="seu_email">Seu e-mail</string>
    <string name="proximo">Próximo</string>
    <string name="senha_e_usuario">Usuário e Senha</string>
    <string name="crie_um_nome_de_usuario">Crie um nome de usuário:</string>
    <string name="usuario_hint">Usuário</string>
    <string name="crie_uma_senha">Crie uma senha:</string>
    <string name="cabecalho_senha_titulo">(deve ter no mínimo 8 caraceres e incluir letras, números e caracteres especiais)</string>
    <string name="senha_hint">Senha</string>
    <string name="confirme_sua_senha">Confirme sua senha:</string>
    <string name="digite_hint">Digite sua senha novamente</string>
    <string name="finalizar">Finalizar</string>
    <string name="e_mail_invalido">E-mail inválido!</string>
    <string name="aviso_obrigatorio">Campo Obrigatório!</string>
    <string name="aviso_senha_numero">*Senha com números</string>
    <string name="qt_caracteres_item">*Mínimo de 8 caracteres</string>
    <string name="senha_com_letras">*Senha com letras maiúsculas e minúsculas</string>
    <string name="senha_com_caracteres_especiais">*Senha com caracteres especiais</string>
    <string name="aviso_senha_errada">As senhas precisam ser as mesmas</string>
    <string name="alterar_dados">Alterar dados</string>
    <string name="nome">Nome:</string>
    <string name="confirme_com_sua_senha">Confirme com sua senha:</string>
    <string name="confirmar">Confirmar</string>
    <string name="nome_de_usuario">Nome de usuário:</string>
    <string name="nome_de_usuario_hint">Nome de usuário</string>
    <string name="modificar_dados">Modificar informações pessoais</string>
    <string name="modificar_senha">Modificar a senha de usuário</string>
    <string name="alterar_os_dados">Alterar dados</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="Digitar_senha_atual">Digite a senha atual:</string>
    <string name="senha_atual_hint">Senha atual</string>
    <string name="digitar_nova_senha_">Digite a nova senha:</string>
    <string name="nova_senha_hint">Nova senha</string>
    <string name="confirme_a_nova_senha">Confirme a nova senha:</string>
</resources>