<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/usuario_comum">
        <menu>
            <group>
                <item
                    android:id="@+id/ic_home"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:title="@string/home"/>
                <item
                    android:id="@+id/ic_local"
                    android:icon="@drawable/ic_clinic"
                    android:title="@string/locais"/>
                <item
                    android:id="@+id/ic_syringe"
                    android:icon="@drawable/ic_syringe"
                    android:title="@string/Pesquisar"
                    />
                <item
                    android:id="@+id/ic_config"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/config"/>
            </group>
        </menu>
    </item>

    <item
        android:title="@string/agente_de_saude"
        android:id="@+id/administrador_area"
        android:visible="true">
        <menu>
            <group>
                <item
                    android:id="@+id/entrar"
                    android:icon="@drawable/ic_baseline_account_box_24"
                    android:title="@string/entrar_login"/>
                <item
                    android:id="@+id/meusdados"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:title="@string/acessar_alterar_meus_dados"/>
                <item
                    android:id="@+id/sair"
                    android:icon="@drawable/ic_exit_to_app"
                    android:title="@string/sair_logout"
                    android:visible="false"/>
            </group>

        </menu>
    </item>
    <item
        android:title="@string/locais_de_vacinacao"
        android:id="@+id/locais_de_vacinacao_area"
        android:visible="true">
        <menu>
            <group>
                <item
                    android:id="@+id/local1"
                    android:icon="@drawable/ic_clinic"
                    android:title="Posto 1"/>
                <item
                    android:id="@+id/local2"
                    android:icon="@drawable/ic_clinic"
                    android:title="Posto 2"/>
            </group>
        </menu>
    </item>
    <item
        android:title="@string/vacinacao"
        android:id="@+id/vacinacao_area"
        android:visible="true">
        <menu>
            <group>
                <item
                    android:id="@+id/modificar_campanha"
                    android:icon="@drawable/edit_property_ic"
                    android:title="@string/inserir_alterar_campanhas"/>
                <item
                    android:id="@+id/modificar_vacina"
                    android:icon="@drawable/edit_property_ic"
                    android:title="@string/inserir_alterar_vacinas"/>
                <item
                    android:id="@+id/campanhas_finalizadas"
                    android:icon="@drawable/calendar_checked_ic"
                    android:title="@string/campanhas_finalizadas"/>
            </group>
        </menu>
    </item>

</menu>