<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:layout="@layout/preferences_layout"/>

    <PreferenceCategory app:title="@string/tela_inicial">

        <MultiSelectListPreference
            app:key="resposta_distritos"
            app:title="Filtrar distritos"
            app:summary="@string/descricao_filtrar_distritos"
            app:defaultValue="@array/reply_values_distritos"
            app:entries="@array/reply_entries_distritos"
            app:entryValues="@array/reply_values_distritos"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Preferências do app">

        <ListPreference
            app:key="tema_escolhido"
            app:title="Tema do app"
            app:summary="@string/escolher_tema"
            app:dialogTitle="Escolha o seu tema"
            app:defaultValue="@string/tema_claro_valor"

            app:entries="@array/reply_entries_temas"
            app:entryValues="@array/reply_entries_temas"
            />

        <SwitchPreferenceCompat
            app:key="menu_visibilidade"
            app:title="Menu do agente de saúde - Visibilidade"
            app:summary="Ocultar área do menu do agente de saúde"
            app:singleLineTitle="false"
            app:summaryOn="@string/area_usuario_ativo"
            app:summaryOff="@string/area_usuario_inativo"
            app:defaultValue="@string/area_usuario_ativo"/>

        <ListPreference
            app:key="fonte_preferencia"
            app:title="Tamanho da fonte"
            app:summary="Definir tamanho da fonte"
            app:defaultValue="@string/media_valor"
            app:entries="@array/reply_entries_fontsize"
            app:entryValues="@array/reply_values_fontsize"/>

        <Preference
            app:layout="@layout/reset_item_preference"
            app:key="default_preference"
            app:selectable="false"
            />

    </PreferenceCategory>




</PreferenceScreen>